<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="enter_search_query">Enter Search Query</string>
    <string name="search">Search</string>
    <string name="preferences">Preferences</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="sort_order_prompt">Choose A Sort Order</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="business">Business</string>
    <string name="styles">Styles</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="movies">Movies</string>
    <string name="foreign">Foreign</string>
    <string name="save">Save</string>
    <string name="search_settings">Search Settings</string>
    <string name="cancel">Cancel</string>
    <string name="internet_connection_error">Internet Connection Error</string>
    <string name="retry">Retry</string>
    <string name="search_api_error">Search API Error</string>
    <string name="top_stories">Top Stories</string>

    <string-array name="sort_array">
        <item>Choose Sort Order</item>
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
</resources>
